add the footer to html index Relates #8

--- a/public/index.html
+++ b/public/index.html
@@ -28,5 +28,8 @@
 
     </div>
   </section>
+  <footer class="footer">
+    <a href="https://newsapi.org/" class='footer__link'>Powered by NewsAPI.org</a>
+  </footer>
 </body>
 </html>
