--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <section class="search">
-    <form action="/search" method="GET">
+    <form action="/search" method="GET" class="form">
       <input type="text" name="userinput" placeholder="What's going on?" class="form__userinput" id="form__userinput">
       <input type="submit" class="form__searchbtn" id="form__searchbtn">
     </form>
@@ -18,6 +18,7 @@
 
   <section class="news-section">
     <div class="container">
+      <div class='news-article'>
       <!-- <div class="news__image">
 
       </div>
@@ -25,7 +26,7 @@
       <div class="news__details">
 
       </div> -->
-
+      </div>
     </div>
   </section>
   <footer class="footer">
