--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="/style.css">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
-    integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+  <link rel="stylesheet" href="/public/style.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
   <title>What's going on</title>
 </head>
-
 <body>
   <section class="search">
     <form action="/search" method="GET" class="form">
@@ -23,9 +20,10 @@
     <div class="container" id="container">
       <div class="news__article">
         <div class="news__image" id="news__image">
-
+          
         </div>
         <div class="news__details" id="news__details">
+      
         </div>
 
       </div>
@@ -34,7 +32,6 @@
   <footer class="footer">
     <a href="https://newsapi.org/" class='footer__link'>Powered by NewsAPI.org</a>
   </footer>
-  <script src="js/dom.js"></script>
+  <script src="/public/js/dom.js"></script>
 </body>
-
 </html>
