--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
   </section>
 
   <section class="news-section" id="news-section">
+    <div id='lds-hourglass'class="lds-hourglass hide"></div>
     <div class="container" id="container">
       <div class="news__article">
         <div class="news__image" id="news__image">
