--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="/public/style.css">
+  <link rel="stylesheet" href="/style.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
   <title>What's going on</title>
 </head>
@@ -33,6 +33,6 @@
   <footer class="footer">
     <a href="https://newsapi.org/" class='footer__link'>Powered by NewsAPI.org</a>
   </footer>
-  <script src="/public/js/dom.js"></script>
+  <script src="/js/dom.js"></script>
 </body>
 </html>
