fixed responsive, and switched to mobile first relates #14

--- a/public/index.html
+++ b/public/index.html
@@ -13,21 +13,12 @@
   <section class="search">
     <form action="/search" method="GET" class="form">
       <input type="text" name="userinput" placeholder="What's going on?" class="form__userinput" id="form__userinput">
-      <input type="button" class="form__searchbtn" id="form__searchbtn" value="submit">
+      <input type="button" class="form__searchbtn" id="form__searchbtn" value="Search">
     </form>
   </section>
   <section class="news-section" id="news-section">
-      <div id='lds-hourglass'class="lds-hourglass hide"></div>
+    <div id='lds-hourglass'class="lds-hourglass hide"></div>
     <div class="container" id="container">
-      <div class="news__article">
-        <div class="news__image" id="news__image">
-          
-        </div>
-        <div class="news__details" id="news__details">
-      
-        </div>
-
-      </div>
     </div>
   </section>
   <footer class="footer">
