--- a/public/index.html
+++ b/public/index.html
@@ -12,11 +12,11 @@
 <body>
   <section class="search">
     <form action="/search" method="GET" class="form">
-      <input type="text" name="userinput" placeholder="What's going on?" class="form__userinput" id="form__userinput">
+      <input type="text" name="userinput" placeholder="What's going on?" class="form__userinput" id="form__userinput" aria-label="search for latest news">
       <input type="button" class="form__searchbtn" id="form__searchbtn" value="Search">
     </form>
   </section>
-  <section class="news-section" id="news-section">
+  <section class="news-section" id="news-section"></section>
     <div id='lds-hourglass'class="lds-hourglass hide"></div>
     <div class="container" id="container">
     </div>
