removed unused form and changed nessecary references and tested everything

--- a/public/index.html
+++ b/public/index.html
@@ -11,10 +11,8 @@
 </head>
 <body>
   <section class="search">
-    <form action="/search" method="GET" class="form">
-      <input type="text" name="userinput" placeholder="What's going on?" class="form__userinput" id="form__userinput">
-      <input type="button" class="form__searchbtn" id="form__searchbtn" value="Search">
-    </form>
+      <input type="text" placeholder="What's going on?" class="search__input" id="search__input">
+      <input type="button" class="search__btn" id="search__btn" value="Search">
   </section>
   <section class="news-section" id="news-section">
     <div id='lds-hourglass'class="lds-hourglass hide"></div>
