--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
   <footer class="footer">
     <a href="https://newsapi.org/" class='footer__link'>Powered by NewsAPI.org</a>
   </footer>
+  <script src="/js/logic.js"></script>
   <script src="/js/dom.js"></script>
 </body>
 </html>
