Resolve the issue Relates #61 #53

--- a/public/index.html
+++ b/public/index.html
@@ -10,9 +10,11 @@
   <title>What's going on</title>
 </head>
 <body>
-  <section class="search">
+  <section>
+    <form id="form" class="search">
       <input type="text" placeholder="What's going on?" class="search__input" id="search__input" aria-label="search for latest news">
-      <input type="button" class="search__btn" id="search__btn" value="Search">
+      <input type="submit" class="search__btn" id="search__btn" value="Search">
+    </form>
   </section>
   <section class="news-section" id="news-section">
     <div id='lds-hourglass'class="lds-hourglass hide"></div>
